Jun2025 Update - Website conformity - TAMU email is deleted - put CISV above IDEA in leadership category - Renamed Skills to softwares - removed and reordered softwares to make it two more relavant lines - updated hobbies to match RC SPARK feature _"Trying new things"_ - some changes due to pandoc docx update  - use gfm instead of markdown_mmd  - added custome word text styles (one that aligned even table columns to the left, and other font ones)  - updated CSS with custom word text styles - TODO report issue with pandoc docx converstion that is rendering left text-aligns as center ones and removing a bold.   - adding custom word text styles helped fix this.   can use CSS with *[data-custom-style^="<style>"]   - ~~HOTFIX: either manually replacing them, changing them to justify text-align when running pandoc or potentially could revert pandoc versions.~~   - current v3.7.0.2

--- a/media/style_block_insert.css
+++ b/media/style_block_insert.css
@@ -1,23 +1,34 @@
 /* 
-pandoc -f docx -t markdown_mmd sebvc_Resume.docx -o sebvc_Resume.md 
+pandoc -f docx+styles -t gfm sebvc_Resume.docx -o sebvc_Resume.md
 */
 /* global class styles */
 /* Title */
-.header th{
+/* thead tr th, */
+*[data-custom-style^="Resume Title"]{
   text-align: center;
   font-size: xx-large;
 }
 /* icons row */
-tr:nth-of-type(1){
+/* tr:nth-of-type(1), */
+*[data-custom-style^="Resume Socials"]{
   text-align: center;
   /* font-size: medium; */
 }
 /* Column of Categories */
-tr:nth-of-type(2) > td:first-of-type,
+/* tr:nth-of-type(2) > td:first-of-type,
 .even td[rowspan],
-.odd td[rowspan]
+.odd td[rowspan], */
+*[data-custom-style^="Resume_Cat"]
 {
 /* color: red; */
 text-align: right;
+vertical-align: top;
+}
+
+/* Experience Blocks */
+*[data-custom-style^="Experience"]
+{
+/* color: red; */
+text-align: left;
 vertical-align: top;
 }
